--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <img src="pic/meg4.png" data-speedx = "0.100" data-speedy = "0.050" class="parallax meg4">
     </main>
 
-    <script src="js/app.js"></script>
+    <script src="app.js"></script>
 
 </body>
 </html>
