--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <img src="pic/higherGround1.png" data-speedx = "0.035" data-speedy = "0.035" class="parallax high4">
         <img src="pic/higherGround4.png" data-speedx = "0.026" data-speedy = "0.025" class="parallax high5">
         <img src="pic/player.png" data-speedx = "0.001" data-speedy = "0.015" class="parallax player">
-        <img src="" data-speedx = "0.002" data-speedy = "0.002" class="parallax me">
+        <img src="" data-speedx = "0.002" data-speedy = "0.002" class="">
         <div class="text parallax" data-speedx = "0.025" data-speedy = "0.025">
             <h1>Hello, My name is</h1>
             <h2>Shutipon</h2>
